--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -18,10 +18,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuDEPBjEycQ85Sfmsucaec9ugKM5sc4-k"></script> 
     
-<link rel="stylesheet" href="styles.a02cccee2f0593457c68.css"></head>
+</head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.7f29ac1f8c6790364551.js" type="module"></script><script src="polyfills-es2015.ab801032bd1de229f8b2.js" type="module"></script><script src="runtime-es5.ff91c11ad87c1185f949.js" nomodule></script><script src="polyfills-es5.00ddbec97cda661e72d4.js" nomodule></script><script src="cordova.22d0b106f4dfd80eb9b7.js"></script><script src="main-es2015.b1d0613978128d4c92a5.js" type="module"></script><script src="main-es5.8079634747e873dda861.js" nomodule></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule></script><script src="polyfills-es5.js" nomodule></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule></script><script src="cordova.js"></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule></script><script src="main-es5.js" nomodule></script></body>
 
 </html>
