--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -18,10 +18,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuDEPBjEycQ85Sfmsucaec9ugKM5sc4-k"></script> 
     
-</head>
+<link rel="stylesheet" href="styles.a02cccee2f0593457c68.css"></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.js" type="module"></script><script src="polyfills-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule></script><script src="polyfills-es5.js" nomodule></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule></script><script src="cordova.js"></script><script src="vendor-es2015.js" type="module"></script><script src="main-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule></script><script src="main-es5.js" nomodule></script></body>
+<script src="runtime-es2015.dab9f3bee1467965e09d.js" type="module"></script><script src="polyfills-es2015.ab801032bd1de229f8b2.js" type="module"></script><script src="runtime-es5.719b1f9cda948f6c9376.js" nomodule></script><script src="polyfills-es5.00ddbec97cda661e72d4.js" nomodule></script><script src="cordova.22d0b106f4dfd80eb9b7.js"></script><script src="main-es2015.8bf81bdd09b7a9292c3e.js" type="module"></script><script src="main-es5.01cde9dfd30d89444a20.js" nomodule></script></body>
 
 </html>
